--- a/style1.css
+++ b/style1.css
@@ -76,17 +76,17 @@ h2
 {
 	color: #45f3ff;
 	font-weight: 500;
-    font-size: 65px;
+    font-size: 60px;
     margin-top: 35px;
 	text-align: center;
-	letter-spacing: 0.1em;
+	text-decoration: underline;
 }
 h3 {
     color: #45f3ff;
 	font-weight: 500;
     font-size: 45px;
 	text-align: center;
-	letter-spacing: 0.1em;
+	text-decoration: underline;
 }
 
 .inputBox 
